# Q

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
